[FEAT] 알림 조회 API 채팅, 댓글 필터링 추가 (#197)
* chore: 세션 의존성 및 설정 제거

* refactor: 세션 인터셉터 제거

* feat: access 토큰 멤버 추출과 optional 토큰 추출 메서드 구현

* feat: 토큰에서 사용자 ID를 가져오는 ArgumentResolver 구현

* feat: 알림 조회 API 채팅 및 댓글 필터링 추가

* refactor: webReqeust에도 NonNull 어노테이션 추가

* refactor: stream 결과가 불변 리스트를 반환하도록 변경 및 불필요한 메서드 제거

* fix: 컨트롤러에서 토큰의 사용자 ID를 주입받아 사용하도록 변경

* refactor: SessionUtils 삭제